# aiognmi

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
aiognmi/: __init__.py  client.py  models.py  response.py  utils.py
aiognmi/proto/gnmi/: gnmi.proto  gnmi_pb2.py  gnmi_pb2_grpc.py
aiognmi/proto/gnmi_ext/: gnmi_ext_pb2.py
tests/: test_utils.py
